--- a/css/style.css
+++ b/css/style.css
@@ -1171,7 +1171,8 @@ fieldset {
 
 /* Оверлей */
 
-.success {
+.success,
+.error {
   position: fixed;
   top: 0;
   left: 0;
@@ -1192,7 +1193,12 @@ fieldset {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.success__message {
+.error {
+  background-color: rgba(255, 0, 0, 0.6);
+}
+
+.success__message,
+.error__message {
   position: relative;
 
   color: #ffffff;
@@ -1200,7 +1206,8 @@ fieldset {
   font-weight: 700;
 }
 
-.success__message::before {
+.success__message::before,
+.error__message::before {
   content: "";
   position: absolute;
 
@@ -1218,6 +1225,7 @@ fieldset {
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
 }
+
 @keyframes validation-error {
   0%, 50%, 100% {
     transform: translateX(0);
