--- a/css/style.css
+++ b/css/style.css
@@ -1193,9 +1193,9 @@ fieldset {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.error {
+/*.error {
   background-color: rgba(255, 0, 0, 0.6);
-}
+}*/
 
 .success__message,
 .error__message {
